fix: :bug: Fix jacoco plugin in pom.xml files
Fixed the jacoco plugin in all pom.xml files in root folder, core folder and fxui folder, and changed all versions for jacoco to 0.8.12

Co-authored-by: Sylvia Yung