@@ -137,54 +137,6 @@
                 </dependency>
             </dependencies>
         </profile>
-
-    
-        <profile>
-            <id>jacoco</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.1.2</version>
-                        <configuration>
-                            <!-- <skipTests>${skipUiTests}</skipTests> -->
-                            <!-- <systemPropertyVariables>
-                                <headless>${headlessTests}</headless>
-                            </systemPropertyVariables> -->
-                            <argLine>
-                            @{jaCoCoArgLine}
-                            --add-opens movielibrary.ui/movielibrary.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                            --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
-                            --add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
-                            </argLine>
-                        </configuration>
-                    </plugin> 
-                    <plugin> 
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <configuration>
-                            <propertyName>jaCoCoArgLine</propertyName>
-                         </configuration>
-                        <executions>
-                        <execution>
-                            <id>prepare-agent</id>
-                            <goals>
-                                <goal>prepare-agent</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>report</id>
-                            <phase>test</phase>
-                            <goals>
-                                <goal>report</goal>
-                            </goals>
-                        </execution>
-                        </executions>
-                    </plugin>  
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 
     <build>
@@ -203,6 +155,7 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <argLine>
+                    ${jaCoCoArgLine}
                     --add-opens movielibrary.ui/movielibrary.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                     </argLine>
                 </configuration>
@@ -263,7 +216,10 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
+                <version>0.8.12</version>
+                <configuration>
+                    <propertyName>jaCoCoArgLine</propertyName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
